# ripc

./: .gitignore  Cargo.toml  pyproject.toml  ripc.pyi  rs_ipc.pyi  test_read.py  test_video_show.py  test_video_write.py  test_write.py
.github/workflows/: CI.yml
src/: circle_buffer.rs  circular_queue.rs  lib.rs  memory_holder.rs  memory_manager.rs  pthread_lock.rs  shared_memory.rs  utils.rs
src/container/: circular_queue.rs  message.rs  mod.rs  shared_memory.rs
src/helpers/: bytes.rs  mod.rs  queue_data.rs
src/primitives/: condvar.rs  memory_holder.rs  memory_mapper.rs  mod.rs  mutex.rs  shared_futex.rs
src/python/: circular_queue.rs  dynamic_queue.rs  message.rs  mod.rs  open_mode.rs  operation_mode.rs  queue.rs  reader.rs  reader_wait_policy.rs  shared_memory.rs  shared_queue.rs  writer.rs
src/utils/: mod.rs  pthread_lock.rs  pthread_rw_lock.rs
