[package]
name = "ripc"
version = "0.6.0"
edition = "2021"

[profile.release]
lto = "fat"

[lib]
name = "ripc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23" }
rustix = { version = "0.38", default-features = false, features = ["mm", "fs", "shm", "std", "linux_latest"] }
linux-futex = "1.0.0"
